# ai_scientist

./: .ai-check-config.yaml  .gitignore  .qa_config.yaml  BRANDING.md  CHANGELOG.md  COMPLETION_REPORT.md  COMPREHENSIVE_LITERATURE_REVIEW_LLM_CONSCIOUSNESS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_CHECKLIST.md  INSTALLATION.md  LICENSE.md  LITERATURE_INTEGRATION.md  MARKETPLACE_READY_SUMMARY.md  MARKETPLACE_SUBMISSION.md  PACKAGE_CONTENTS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README.md.original  README2.md  README_TRANSFORMATION.md  REVIEW_SUMMARY.md  SECURITY.md  SETUP_INSTRUCTIONS.md  TEST_RESULTS.md  ace_paper_references.md  api_integration_test_results.json  compass_artifact_wf-c7cc2ea9-a619-443f-8dad-b56da49522fd_text_markdown.md  coverage.json  output.json  pytest_html_report.html
.claude/: session_state.json  settings.json  test_agents.py
.claude-plugin/: marketplace.json  plugin.json
agents/: code-reviewer.md  data-analyst.md  manuscript-writer.md  meta-reviewer.md  quality-assurance.md
code/: __init__.py
docs/: AGENT_REFERENCE.md  AGENT_TEST_RESULTS.md  API_INTEGRATION_TESTS.md  API_SETUP.md  CLAUDE.md  CLAUDE_CODE_ARCHITECTURE.md  CLAUDE_CODE_SKILLS_ANALYSIS.md  IMPLEMENTATION_APPROACHES_ANALYSIS.md  INSTALLATION.md  INSTALLATION_GUIDE.md  MARKETPLACE_LISTING.md  PHASE7_TEST_REPORT.md  PHASE8_FINAL_REPORT.md  PIPELINE_GUIDE.md  README.md  SKILL_IMPLEMENTATION_GUIDE.md  SKILL_REFERENCE.md  STATUS.md  USER_GUIDE.md  V1.1.0_PLAN.md  V1.2.0_PLAN.md  literature_synthesis.md  problem_statement.md  references.md
hooks/: pre-commit-ai-check.py
llm-consciousness-review/: REVIEW_SUMMARY.md
mcp-servers/: citation-management.py  test_real_apis.py  test_server_logic.py
mcp-servers/citation-management/: README.md  pyproject.toml
mcp-servers/citation-management/src/research_citations/: __init__.py
mcp-servers/literature-search/: README.md  pyproject.toml
mcp-servers/literature-search/src/research_lit_search/: __init__.py  server.py
mcp-servers/research-database/: README.md  pyproject.toml
mcp-servers/research-database/src/research_db/: __init__.py  server.py
research-project/: README.md
research-tom-llm/: REVIEW_SUMMARY.md
research_output/: ACE_AI_Scientist_Analysis.md  ACE_literature_review.md  Additional_Research_Topics.md  README.md
results/: gap_analysis.md  gaps_in_understanding.md  key_gaps_and_themes.md  literature_review_synthesis.md  prisma_flow_diagram.md  proposed_safeguards.md  quality_metrics_summary.md  (+2 more)
(+234 files in other folders)
