[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-citation-management"
version = "1.0.0"
description = "MCP server for citation verification, retraction checking, and BibTeX management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aaron Storey", email = "aaron@astoreyai.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "habanero>=1.2",
    "bibtexparser>=1.4",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/astoreyai/ai_scientist"
Repository = "https://github.com/astoreyai/ai_scientist"

[tool.hatch.build.targets.wheel]
packages = ["src/research_citations"]
